--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.31.1",
         "@heroicons/react": "^2.2.0",
-        "@jup-ag/wallet-adapter": "^0.2.3",
         "@solana/wallet-adapter-wallets": "^0.19.37",
         "@solana/web3.js": "^1.98.2",
         "ivy-sdk": "^1.0.7",
+        "lucide-react": "^0.539.0",
         "next": "15.4.3",
         "react": "19.1.0",
         "react-dom": "19.1.0"
