--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.31.1",
         "@heroicons/react": "^2.2.0",
+        "@solana/wallet-adapter-react": "^0.15.39",
         "@solana/wallet-adapter-wallets": "^0.19.37",
         "@solana/web3.js": "^1.98.2",
         "ivy-sdk": "^1.0.7",
